--- a/ecommerce-front/src/styles.css
+++ b/ecommerce-front/src/styles.css
@@ -62,3 +62,33 @@
       background-position: 0% 50%;
   }
 }
+
+/* ---------- Single Product Page ---------- */
+
+.name {
+  background: indigo;
+  color: #fff;
+  font-weight: bold;
+}
+
+/* ---------- Black Shade ---------- */
+
+.black-10 {
+  background: #f2f2f2;
+}
+
+.black-9 {
+  background: #e6e6e6;
+}
+
+.black-8 {
+  background: #ccc;
+}
+
+/* ---------- Cart badge ---------- */
+.cart-badge, .cart-badge:hover {
+  border-radius: 50%;
+  padding: 4px;
+  font-size: 11px;
+  background-color: rgb(4, 37, 145);
+}
